--- a/Project03/Project03.html
+++ b/Project03/Project03.html
@@ -4,14 +4,11 @@
     <meta charset="utf-8">
     <title> HappyDailyLife </title>
       <style>
-
-
         <link href="https://fonts.googleapis.com/css?family=Anton|Major" rel="stylesheet">
-            p {height :5900px;
-
-            }
-            body {
-              background: linear-gradient(snow, lightyellow , orange , brown, steelblue, midnightblue, black);height :5900px;
+        p {height :3000px;}
+      body {
+              background: linear-gradient(black,black, pink, hotpink, steelblue, midnightblue);
+              height :4000px;
               cursor: url(./image/puppycopy128.png), auto;
                 }
 
@@ -117,36 +114,8 @@ p:nth-child(3) a:hover{
   animation: neon3 1.5s ease-in-out infinite alternate;
 }
 
-p:nth-child(4) a{
-  color:#B6FF00;
-  font-family:PressStart;
-  font-size:0.8em;
-}
-p:nth-child(4) a:hover{
-  -webkit-animation: neon4 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon4 1.5s ease-in-out infinite alternate;
-  animation: neon4 1.5s ease-in-out infinite alternate;
-}
 
-p:nth-child(5) a{
-  color:#FF9900;
-  font-family:Audiowide;
-}
-p:nth-child(5) a:hover{
-  -webkit-animation: neon5 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon5 1.5s ease-in-out infinite alternate;
-  animation: neon5 1.5s ease-in-out infinite alternate;
-}
 
-p:nth-child(6) a{
-  color:#BA01FF;
-  font-family:Vampiro One;
-}
-p:nth-child(6) a:hover{
-  -webkit-animation: neon6 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon6 1.5s ease-in-out infinite alternate;
-  animation: neon6 1.5s ease-in-out infinite alternate;
-}
 
 p a:hover{
 color:#ffffff;
@@ -201,97 +170,7 @@ color:#ffffff;
   }
 }
 
-@-webkit-keyframes neon3 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FFDD1B,
-               0 0 70px  #FFDD1B,
-               0 0 80px  #FFDD1B,
-               0 0 100px #FFDD1B,
-               0 0 150px #FFDD1B;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FFDD1B,
-               0 0 35px #FFDD1B,
-               0 0 40px #FFDD1B,
-               0 0 50px #FFDD1B,
-               0 0 75px #FFDD1B;
-  }
-}
 
-@-webkit-keyframes neon4 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #B6FF00,
-               0 0 70px  #B6FF00,
-               0 0 80px  #B6FF00,
-               0 0 100px #B6FF00,
-               0 0 150px #B6FF00;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #B6FF00,
-               0 0 35px #B6FF00,
-               0 0 40px #B6FF00,
-               0 0 50px #B6FF00,
-               0 0 75px #B6FF00;
-  }
-}
-
-@-webkit-keyframes neon5 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF9900,
-               0 0 70px  #FF9900,
-               0 0 80px  #FF9900,
-               0 0 100px #FF9900,
-               0 0 150px #FF9900;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF9900,
-               0 0 35px #FF9900,
-               0 0 40px #FF9900,
-               0 0 50px #FF9900,
-               0 0 75px #FF9900;
-  }
-}
-
-@-webkit-keyframes neon6 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px #fff,
-               0 0 30px #fff,
-               0 0 40px #ff00de,
-               0 0 70px #ff00de,
-               0 0 80px #ff00de,
-               0 0 100px #ff00de,
-               0 0 150px #ff00de;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #ff00de,
-               0 0 35px #ff00de,
-               0 0 40px #ff00de,
-               0 0 50px #ff00de,
-               0 0 75px #ff00de;
-  }
-}
 
 /*glow for mozilla*/
 @-moz-keyframes neon1 {
@@ -337,98 +216,6 @@ color:#ffffff;
                0 0 40px #228DFF,
                0 0 50px #228DFF,
                0 0 75px #228DFF;
-  }
-}
-
-@-moz-keyframes neon3 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FFDD1B,
-               0 0 70px  #FFDD1B,
-               0 0 80px  #FFDD1B,
-               0 0 100px #FFDD1B,
-               0 0 150px #FFDD1B;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FFDD1B,
-               0 0 35px #FFDD1B,
-               0 0 40px #FFDD1B,
-               0 0 50px #FFDD1B,
-               0 0 75px #FFDD1B;
-  }
-}
-
-@-moz-keyframes neon4 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #B6FF00,
-               0 0 70px  #B6FF00,
-               0 0 80px  #B6FF00,
-               0 0 100px #B6FF00,
-               0 0 150px #B6FF00;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #B6FF00,
-               0 0 35px #B6FF00,
-               0 0 40px #B6FF00,
-               0 0 50px #B6FF00,
-               0 0 75px #B6FF00;
-  }
-}
-
-@-moz-keyframes neon5 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF9900,
-               0 0 70px  #FF9900,
-               0 0 80px  #FF9900,
-               0 0 100px #FF9900,
-               0 0 150px #FF9900;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF9900,
-               0 0 35px #FF9900,
-               0 0 40px #FF9900,
-               0 0 50px #FF9900,
-               0 0 75px #FF9900;
-  }
-}
-
-@-moz-keyframes neon6 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px #fff,
-               0 0 30px #fff,
-               0 0 40px #ff00de,
-               0 0 70px #ff00de,
-               0 0 80px #ff00de,
-               0 0 100px #ff00de,
-               0 0 150px #ff00de;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #ff00de,
-               0 0 35px #ff00de,
-               0 0 40px #ff00de,
-               0 0 50px #ff00de,
-               0 0 75px #ff00de;
   }
 }
 
@@ -479,99 +266,6 @@ color:#ffffff;
   }
 }
 
-@keyframes neon3 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FFDD1B,
-               0 0 70px  #FFDD1B,
-               0 0 80px  #FFDD1B,
-               0 0 100px #FFDD1B,
-               0 0 150px #FFDD1B;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FFDD1B,
-               0 0 35px #FFDD1B,
-               0 0 40px #FFDD1B,
-               0 0 50px #FFDD1B,
-               0 0 75px #FFDD1B;
-  }
-}
-
-@keyframes neon4 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #B6FF00,
-               0 0 70px  #B6FF00,
-               0 0 80px  #B6FF00,
-               0 0 100px #B6FF00,
-               0 0 150px #B6FF00;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #B6FF00,
-               0 0 35px #B6FF00,
-               0 0 40px #B6FF00,
-               0 0 50px #B6FF00,
-               0 0 75px #B6FF00;
-  }
-}
-
-@keyframes neon5 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF9900,
-               0 0 70px  #FF9900,
-               0 0 80px  #FF9900,
-               0 0 100px #FF9900,
-               0 0 150px #FF9900;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF9900,
-               0 0 35px #FF9900,
-               0 0 40px #FF9900,
-               0 0 50px #FF9900,
-               0 0 75px #FF9900;
-  }
-}
-
-@keyframes neon6 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px #fff,
-               0 0 30px #fff,
-               0 0 40px #ff00de,
-               0 0 70px #ff00de,
-               0 0 80px #ff00de,
-               0 0 100px #ff00de,
-               0 0 150px #ff00de;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #ff00de,
-               0 0 35px #ff00de,
-               0 0 40px #ff00de,
-               0 0 50px #ff00de,
-               0 0 75px #ff00de;
-  }
-}
-
-
 /*REEEEEEEEEEESPONSIVE*/
 @media (max-width: 650px) {
 
@@ -588,44 +282,12 @@ color:#ffffff;
 
 
 
-.container {
-position:absolute;
-top:800px;
-left:350px;
-justify-content:space-around;
-align-items: center;
-
-margin: 40px auto;
-
-font-size: 40px;
-font-family: sans-serif;
-color: black;
-}
-
-@keyframes blink {
-from {
-opacity: 1;
-}
-
-to {
-opacity: 0;
-}
-
-
-span {
-animation: blink 50s infinite;
-}
-}
-
 
             .happyface{
                 position:absolute;
                 left:160px;
                 top:60px;
             }
-
-            
-
             .dogfeet{
                 position:absolute;
                 left:350px;
@@ -639,53 +301,165 @@ animation: blink 50s infinite;
             .dogBone {
                 display: inline-block;
                 position:absolute;
-                left:800px;
-                top:850px;
-                background: Pink;
+                left:940px;
+                top:1310px;
                 z-index:2;
-                border-radius:50%;
                 width: 50px;
                 height: 50px;
-                transition:transform 700ms ease-in-out
-                position-events: none;
+                transition:transform 700ms ;
 
             }
-
-            .trigger:hover .dogBone{
-                transform: translate(150px, 150px;)rotate(10deg)
+            .dogwalk{
+                position:absolute;
+                left:400px;
+                top:1900px;
             }
 
+            .dogball1{
+              position:absolute;
+              left:200px;
+              top:2500px;
+            }
+            .dogball2{
+              position:absolute;
+              left:500px;
+              top:2500px;
+            }
+            .dogball3{
+              position:absolute;
+              left:420px;
+              top:2520px;
+            }
+            .dogball4{
+              position:absolute;
+              left:507px;
+              top:2590px;
+            }
+
+
+            .HappyChicken{
+              position:absolute;
+              left:207px;
+              top:2590px;
+
+            }
 
             .dogBone:hover{
-                transform:translate(200px,150px)
+                transform:translate(20px,-180px)
+            }
+
+
+            .riceball:hover {
+              animation: shake 0.3s;
+              animation-iteration-count: infinite;
+            }
+
+            @keyframes shake {
+              0% { transform: translate(10px, 1px) rotate(0deg); }
+              20% { transform: translate(-8px, 0px) rotate(5deg); }
+              50% { transform: translate(-7px, 2px) rotate(-1deg); }
+              80% { transform: translate(-10px, -1px) rotate(1deg); }
+              100% { transform: translate(1px, -2px) rotate(-5deg); }
             }
 
 
             .riceball {
                 position:absolute;
                 left:890px;
-                top:980px;
+                top:1280px;
             }
 
 
-            a img { display:none; }
-            a:hover img { display:block; }
-            .wakeup {position: absolute;
-            top:700px;
-            left:550px;}
-
-            a2 img { display:none; }
-            a2:hover img { display:block; }
 
 
+            #myButton {
+              position: absolute;
+              left:520px;
+              top:600px;
+              height: 300px;
+            }
 
-            #myButton {height: 300px;}
+            @import '//fonts.googleapis.com/css?family=Muli:300';
+            /* Timeline
+             */
+            .timeline {
+              display: -webkit-flex;
+              display: flex;
+              -webkit-flex-direction: column;
+              flex-direction: column;
+              padding: 0 62px;
+              margin: 400;
+              list-style: none;
+            }
+            .timeline::before {
+              position: fixed;
+              top: 0;
+              height: 100%;
+              padding-right: 13px;
+              border-right: 6px solid #F2F2F2;
+              content: "";
+            }
+            .timeline__item {
+              display: -webkit-flex;
+              display: flex;
+              -webkit-align-items: stretch;
+              align-items: stretch;
+              padding-bottom: 520px ;
+
+            }
+            .timeline__step {
+              padding-right: 62px;
+            }
+            .timeline__step__marker {
+              position: relative;
+              display: table-cell;
+              height: 24px;
+              min-height: 24px;
+              width: 24px;
+              min-width: 24px;
+              border: 4px solid #F2F2F2;
+              -moz-border-radius: 50%;
+              -webkit-border-radius: 50%;
+              border-radius: 50%;
+              background-color: white;
+              z-index: 0;
+            }
+            .timeline__step__marker--red {
+              border-color: #FF3467;
+            }
+            .timeline__step__marker--blue {
+              border-color: #18D0BF;
+            }
+            .timeline__step__marker--salmon {
+              border-color: #F48A6D;
+            }
+            .timeline__step__marker--purple {
+              border-color: #C178FA;
+            }
+            .timeline__time {
+              padding-right: 126px;
+              font-size: 26px;
+            }
+            .timeline__title {
+              padding-bottom: 26px;
+              font-size: 32px;
+            }
+            .timeline__points {
+              padding: 0;
+              list-style: none;
+              font-size: 24px;
+              color: #77777D;
+            }
+            .timeline__points > * {
+              padding: 0 0 12px 0;
+            }
+
+
 
 
 
 
         </style>
-
 
 
 
@@ -697,52 +471,122 @@ animation: blink 50s infinite;
 
 
 
-
         <img class="happyface" src= "./image/puppy.png"  alt="HappyImage" title="HappyImage">
 
         <div id="container">
-          <p><a href="https://en.wikipedia.org/wiki/Red">
+          <p><a class="Red">
                 HAPPY'S <br> DAILY LIFE
               </a></p> </div>
-          <p><a href="https://en.wikipedia.org/wiki/Yellow">
-                111
-                </a></p>
-  <a class href="wakeup">wake up<img src="./image/dogfeet.png"/></a>
-
-          <div class="container">
-          <div class="clock">
-          08<span>:</span>00
-          </div>
-          </div>
 
         <img class="dogfeet" src="./image/dogfeet.png" alt="dogfeet" title="dogfeet">
+
         <img class="dogfeetbig" src="./image/dogfeetbig.png" alt="dogfeetbig" title="dogfeetbig">
 
-        <a class href2="feed me">feed me<img src="./image/dogfeet.png"/></a>
-
-
-
-        <img class="dogBone" src="./image/dog-bone.png" alt="dogBone" title="dogBone">
 
         <img class="riceball" src="./image/riceball.png" alt="riceball" title="riceball">
 
+          <img class="dogBone" src="./image/dog-bone_black.png" alt="dogBone" title="dogBone">
 
 
 
 
-        <img id="myButton" src="./image/IMG_2596.png" />
 
 
+        <img id="myButton" src="./image/IMG_2596.png"/>
+
+        <img class="dogwalk" src="./image/dog-scaping.png"alt="dogwalk" title="dogwalk">
+        <img class="dogball1" src="./image/ball.png"alt="dogball1" title="dogball1">
+
+        <img class="dogball2" src="./image/ball2.png"
+        "alt="dogball2" title="dogball2">
+        <img class="dogball3" src="./image/ball3.png"
+        "alt="dogball3" title="dogball3">
+        <img class="dogball4" src="./image/ball4.png"
+        "alt="dogball4" title="dogball4">
+
+        <img class="HappyChicken" src="./image/IMG_5782.png"
+        "alt="HappyChicken" title="HappyChicken">
 
 
-  </div>
+    <ul class="timeline">
+          <li class="timeline__item">
+            <div class="timeline__step">
+              <div class="timeline__step__marker timeline__step__marker--red"></div>
+            </div>
+            <div class="timeline__time">
+              8am
+
+            </div>
+            <div class="timeline__content">
+              <div class="timeline__title">
+                Wake me up
+                </div>
+
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__step">
+              <div class="timeline__step__marker timeline__step__marker--blue"></div>
+            </div>
+            <div class="timeline__time">
+              12pm
+            </div>
+            <div class="timeline__content">
+              <div class="timeline__title">
+                Time to eat
+              </div>
+            </div>
+          </li>
+          <li class="timeline__item">
+            <div class="timeline__step">
+              <div class="timeline__step__marker timeline__step__marker--blue"></div>
+            </div>
+            <div class="timeline__time">
+              2pm
+            </div>
+            <div class="timeline__content">
+              <div class="timeline__title">
+              Afternoon walk
+              </div>
+
+          <li class="timeline__item">
+            <div class="timeline__step">
+              <div class="timeline__step__marker timeline__step__marker--salmon"></div>
+            </div>
+            <div class="timeline__time">
+              5pm
+            </div>
+            <div class="timeline__content">
+              <div class="timeline__title">
+                Playtime with a toy
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__step">
+              <div class="timeline__step__marker timeline__step__marker--blue"></div>
+            </div>
+            <div class="timeline__time">
+              11pm
+            </div>
+
+            <div class="timeline__content">
+              <div class="timeline__title">
+                Bed time
+              </div>
+            </div>
+  </ul>
+
 
 
         <p class= "c1"> </p>
 
 
     </body>
+
     <script src="script.js" rel="script"></script>
-    <script type="text/javascript">
+    <script type="text/javascript"></script>
+
 
   </html>
