--- a/Project03/Project03.html
+++ b/Project03/Project03.html
@@ -1,592 +1,126 @@
 <!DOCTYPE html>
   <html>
     <head>
-    <meta charset="utf-8">
-    <title> HappyDailyLife </title>
-      <style>
-        <link href="https://fonts.googleapis.com/css?family=Anton|Major" rel="stylesheet">
-        p {height :3000px;}
-      body {
-              background: linear-gradient(black,black, pink, hotpink, steelblue, midnightblue);
-              height :4000px;
-              cursor: url(./image/puppycopy128.png), auto;
-                }
+        <meta charset="utf-8">
+        <title> HappyDailyLife </title>
+          <link href="https://fonts.googleapis.com/css?family=Anton|Major" rel="stylesheet">
+          <link href="Project03.css" rel="stylesheet" type="text/css" media="screen">
 
-*{
-  margin: 0;
-  padding: 0;
-}
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-@font-face {
-  font-family: 'Monoton';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Monoton'), local('Monoton-Regular'), url(http://themes.googleusercontent.com/static/fonts/monoton/v4/AKI-lyzyNHXByGHeOcds_w.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Iceland';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Iceland'), local('Iceland-Regular'), url(http://themes.googleusercontent.com/static/fonts/iceland/v3/F6LYTZLHrG9BNYXRjU7RSw.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Pacifico';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Pacifico Regular'), local('Pacifico-Regular'), url(http://themes.googleusercontent.com/static/fonts/pacifico/v5/yunJt0R8tCvMyj_V4xSjafesZW2xOQ-xsNqO47m55DA.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'PressStart';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Press Start 2P'), local('PressStart2P-Regular'), url(http://themes.googleusercontent.com/static/fonts/pressstart2p/v2/8Lg6LX8-ntOHUQnvQ0E7o3dD2UuwsmbX3BOp4SL_VwM.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Audiowide';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Audiowide'), local('Audiowide-Regular'), url(http://themes.googleusercontent.com/static/fonts/audiowide/v2/8XtYtNKEyyZh481XVWfVOj8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Vampiro One';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Vampiro One'), local('VampiroOne-Regular'), url(http://themes.googleusercontent.com/static/fonts/vampiroone/v3/Ho2Xld8UbQyBA8XLxF1_NYbN6UDyHWBl620a-IRfuBk.woff) format('woff');
-}
-
-body{
-  background-color: #222222;
-}
-
-#container{
-  width:500px;
-  margin:auto;
-}
-
-
-/*neeeeoooon*/
-p{
-  text-align:center;
-  font-size:7em;
-  margin:20px 0 20px 0;
-}
-
-a{
-  text-decoration:none;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-p:nth-child(1) a{
-  color:#FF1177;
-  font-family:Monoton;
-}
-p:nth-child(1) a:hover{
-  -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
-  animation: neon1 1.5s ease-in-out infinite alternate;
-}
-
-p:nth-child(2) a{
-  font-size:1.5em;
-  color:#228DFF;
-  font-family:Iceland;
-}
-p:nth-child(2) a:hover{
-  -webkit-animation: neon2 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon2 1.5s ease-in-out infinite alternate;
-  animation: neon2 1.5s ease-in-out infinite alternate;
-}
-
-p:nth-child(3) a{
-  color:#FFDD1B;
-  font-family:Pacifico;
-}
-p:nth-child(3) a:hover{
-  -webkit-animation: neon3 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon3 1.5s ease-in-out infinite alternate;
-  animation: neon3 1.5s ease-in-out infinite alternate;
-}
-
-
-
-
-p a:hover{
-color:#ffffff;
-}
-
-
-
-/*glow for webkit*/
-@-webkit-keyframes neon1 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF1177,
-               0 0 70px  #FF1177,
-               0 0 80px  #FF1177,
-               0 0 100px #FF1177,
-               0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF1177,
-               0 0 35px #FF1177,
-               0 0 40px #FF1177,
-               0 0 50px #FF1177,
-               0 0 75px #FF1177;
-  }
-}
-
-@-webkit-keyframes neon2 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #228DFF,
-               0 0 70px  #228DFF,
-               0 0 80px  #228DFF,
-               0 0 100px #228DFF,
-               0 0 150px #228DFF;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #228DFF,
-               0 0 35px #228DFF,
-               0 0 40px #228DFF,
-               0 0 50px #228DFF,
-               0 0 75px #228DFF;
-  }
-}
-
-
-
-/*glow for mozilla*/
-@-moz-keyframes neon1 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF1177,
-               0 0 70px  #FF1177,
-               0 0 80px  #FF1177,
-               0 0 100px #FF1177,
-               0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF1177,
-               0 0 35px #FF1177,
-               0 0 40px #FF1177,
-               0 0 50px #FF1177,
-               0 0 75px #FF1177;
-  }
-}
-
-@-moz-keyframes neon2 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #228DFF,
-               0 0 70px  #228DFF,
-               0 0 80px  #228DFF,
-               0 0 100px #228DFF,
-               0 0 150px #228DFF;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #228DFF,
-               0 0 35px #228DFF,
-               0 0 40px #228DFF,
-               0 0 50px #228DFF,
-               0 0 75px #228DFF;
-  }
-}
-
-/*glow*/
-@keyframes neon1 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF1177,
-               0 0 70px  #FF1177,
-               0 0 80px  #FF1177,
-               0 0 100px #FF1177,
-               0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF1177,
-               0 0 35px #FF1177,
-               0 0 40px #FF1177,
-               0 0 50px #FF1177,
-               0 0 75px #FF1177;
-  }
-}
-
-@keyframes neon2 {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #228DFF,
-               0 0 70px  #228DFF,
-               0 0 80px  #228DFF,
-               0 0 100px #228DFF,
-               0 0 150px #228DFF;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #228DFF,
-               0 0 35px #228DFF,
-               0 0 40px #228DFF,
-               0 0 50px #228DFF,
-               0 0 75px #228DFF;
-  }
-}
-
-/*REEEEEEEEEEESPONSIVE*/
-@media (max-width: 650px) {
-
-  #container{
-    width: 100%;
-  }
-
-  p{
-    font-size:3.5em;
-  }
-
-}
-
-
-
-
-
-            .happyface{
-                position:absolute;
-                left:160px;
-                top:60px;
-            }
-            .dogfeet{
-                position:absolute;
-                left:350px;
-                top:600px;
-            }
-            .dogfeetbig{
-                position:absolute;
-                left:550px;
-                top:700px;
-            }
-            .dogBone {
-                display: inline-block;
-                position:absolute;
-                left:940px;
-                top:1310px;
-                z-index:2;
-                width: 50px;
-                height: 50px;
-                transition:transform 700ms ;
-
-            }
-            .dogwalk{
-                position:absolute;
-                left:400px;
-                top:1900px;
-            }
-
-            .dogball1{
-              position:absolute;
-              left:200px;
-              top:2500px;
-            }
-            .dogball2{
-              position:absolute;
-              left:500px;
-              top:2500px;
-            }
-            .dogball3{
-              position:absolute;
-              left:420px;
-              top:2520px;
-            }
-            .dogball4{
-              position:absolute;
-              left:507px;
-              top:2590px;
-            }
-
-
-            .HappyChicken{
-              position:absolute;
-              left:207px;
-              top:2590px;
-
-            }
-
-            .dogBone:hover{
-                transform:translate(20px,-180px)
-            }
-
-
-            .riceball:hover {
-              animation: shake 0.3s;
-              animation-iteration-count: infinite;
-            }
-
-            @keyframes shake {
-              0% { transform: translate(10px, 1px) rotate(0deg); }
-              20% { transform: translate(-8px, 0px) rotate(5deg); }
-              50% { transform: translate(-7px, 2px) rotate(-1deg); }
-              80% { transform: translate(-10px, -1px) rotate(1deg); }
-              100% { transform: translate(1px, -2px) rotate(-5deg); }
-            }
-
-
-            .riceball {
-                position:absolute;
-                left:890px;
-                top:1280px;
-            }
-
-
-
-
-            #myButton {
-              position: absolute;
-              left:520px;
-              top:600px;
-              height: 300px;
-            }
-
-            @import '//fonts.googleapis.com/css?family=Muli:300';
-            /* Timeline
-             */
-            .timeline {
-              display: -webkit-flex;
-              display: flex;
-              -webkit-flex-direction: column;
-              flex-direction: column;
-              padding: 0 62px;
-              margin: 400;
-              list-style: none;
-            }
-            .timeline::before {
-              position: fixed;
-              top: 0;
-              height: 100%;
-              padding-right: 13px;
-              border-right: 6px solid #F2F2F2;
-              content: "";
-            }
-            .timeline__item {
-              display: -webkit-flex;
-              display: flex;
-              -webkit-align-items: stretch;
-              align-items: stretch;
-              padding-bottom: 520px ;
-
-            }
-            .timeline__step {
-              padding-right: 62px;
-            }
-            .timeline__step__marker {
-              position: relative;
-              display: table-cell;
-              height: 24px;
-              min-height: 24px;
-              width: 24px;
-              min-width: 24px;
-              border: 4px solid #F2F2F2;
-              -moz-border-radius: 50%;
-              -webkit-border-radius: 50%;
-              border-radius: 50%;
-              background-color: white;
-              z-index: 0;
-            }
-            .timeline__step__marker--red {
-              border-color: #FF3467;
-            }
-            .timeline__step__marker--blue {
-              border-color: #18D0BF;
-            }
-            .timeline__step__marker--salmon {
-              border-color: #F48A6D;
-            }
-            .timeline__step__marker--purple {
-              border-color: #C178FA;
-            }
-            .timeline__time {
-              padding-right: 126px;
-              font-size: 26px;
-            }
-            .timeline__title {
-              padding-bottom: 26px;
-              font-size: 32px;
-            }
-            .timeline__points {
-              padding: 0;
-              list-style: none;
-              font-size: 24px;
-              color: #77777D;
-            }
-            .timeline__points > * {
-              padding: 0 0 12px 0;
-            }
-
-
-
-
-
-
-        </style>
-
-
+          <style>
+          </style>
 
     </head>
-
-​
 
 <body>
 
 
+  <header>
+    <div class="slideshow"></div>
 
-        <img class="happyface" src= "./image/puppy.png"  alt="HappyImage" title="HappyImage">
-
-        <div id="container">
-          <p><a class="Red">
-                HAPPY'S <br> DAILY LIFE
-              </a></p> </div>
-
-        <img class="dogfeet" src="./image/dogfeet.png" alt="dogfeet" title="dogfeet">
-
-        <img class="dogfeetbig" src="./image/dogfeetbig.png" alt="dogfeetbig" title="dogfeetbig">
-
-
-        <img class="riceball" src="./image/riceball.png" alt="riceball" title="riceball">
-
-          <img class="dogBone" src="./image/dog-bone_black.png" alt="dogBone" title="dogBone">
-
-
-
-
-
-
-        <img id="myButton" src="./image/IMG_2596.png"/>
-
-        <img class="dogwalk" src="./image/dog-scaping.png"alt="dogwalk" title="dogwalk">
-        <img class="dogball1" src="./image/ball.png"alt="dogball1" title="dogball1">
-
-        <img class="dogball2" src="./image/ball2.png"
-        "alt="dogball2" title="dogball2">
-        <img class="dogball3" src="./image/ball3.png"
-        "alt="dogball3" title="dogball3">
-        <img class="dogball4" src="./image/ball4.png"
-        "alt="dogball4" title="dogball4">
-
-        <img class="HappyChicken" src="./image/IMG_5782.png"
-        "alt="HappyChicken" title="HappyChicken">
+    <div class="title">
+      <p>
+        <a class="Red">HAPPY'S <br> DAILY LIFE</a>
+      </p>
+    </div>
+  </header>
+  <div class="container">
+    <div class="arrow">
+      <a href="#section07">
+        <img src="http://marcelklacan.com/images/icon.png" alt="" />
+      </a>
+    </div>
+  </div>
+  <section id="section07" class="demo">
+    <p>eat, play, sleep</p>
+  </section>
 
 
-    <ul class="timeline">
-          <li class="timeline__item">
-            <div class="timeline__step">
-              <div class="timeline__step__marker timeline__step__marker--red"></div>
-            </div>
-            <div class="timeline__time">
-              8am
-
-            </div>
-            <div class="timeline__content">
-              <div class="timeline__title">
-                Wake me up
-                </div>
-
-          </li>
-
-          <li class="timeline__item">
-            <div class="timeline__step">
-              <div class="timeline__step__marker timeline__step__marker--blue"></div>
-            </div>
-            <div class="timeline__time">
-              12pm
-            </div>
-            <div class="timeline__content">
-              <div class="timeline__title">
-                Time to eat
-              </div>
-            </div>
-          </li>
-          <li class="timeline__item">
-            <div class="timeline__step">
-              <div class="timeline__step__marker timeline__step__marker--blue"></div>
-            </div>
-            <div class="timeline__time">
-              2pm
-            </div>
-            <div class="timeline__content">
-              <div class="timeline__title">
-              Afternoon walk
-              </div>
-
-          <li class="timeline__item">
-            <div class="timeline__step">
-              <div class="timeline__step__marker timeline__step__marker--salmon"></div>
-            </div>
-            <div class="timeline__time">
-              5pm
-            </div>
-            <div class="timeline__content">
-              <div class="timeline__title">
-                Playtime with a toy
-              </div>
-            </div>
-          </li>
-
-          <li class="timeline__item">
-            <div class="timeline__step">
-              <div class="timeline__step__marker timeline__step__marker--blue"></div>
-            </div>
-            <div class="timeline__time">
-              11pm
-            </div>
-
-            <div class="timeline__content">
-              <div class="timeline__title">
-                Bed time
-              </div>
-            </div>
-  </ul>
+<div>
+  <img src= "./image/puppy.png"  alt="HappyImage" title="HappyImage" class="happyface">
+</div>
 
 
+<div class="panel" data-color="red">
+<h2>Wake me up</h2>
+</div>
+<div class="panel" data-color="yellow">
+<h2>Feed me</h2>
+</div>
+<div class="panel" data-color="violet">
+  <h2>Play with me</h2>
+  <div class="dogwalk">
+    <img src="./image/IMG_9099.png" alt="dogwalk" title="dogwalk">
+  </div>
+
+  <div class="dogball1">
+    <img  src="./image/ball.png"alt="dogball1">
+  </div>
+
+  <div class="dogball2">
+  <img src="./image/ball2.png"
+  alt="dogball2">
+  </div>
+
+  <div class="dogball3">
+  <img src="./image/ball3.png"
+  alt="dogball3" >
+  </div>
+
+  <div class="dogball4">
+  <img src="./image/ball4.png"
+  alt="dogball4">
+  </div>
+</div>
+<div class="panel" data-color="blue">
+<h2>Afternoon walk</h2>
+</div>
+<div class="panel" data-color="indigo">
+<h2>Good night</h2>
+</div>
+
+
+
+
+        <div class="dogfeet">
+          <img src="./image/dogfeet.png" alt="dogfeet" title="dogfeet">
+        </div>
+
+        <div class="dogfeetbig">
+        <img src="./image/dogfeetbig.png" alt="dogfeetbig" title="dogfeetbig"> </div>
+
+
+        <div class="riceball">
+        <img src="./image/riceball.png" alt="riceball" title="riceball"></div>
+
+        <div class="dogBone">
+          <img src="./image/dog-bone_black.png" alt="dogBone" title="dogBone"> </div>
+
+
+
+
+
+
+        <div id="myButton">
+        <img src="./image/IMG_2596.png"/></div>
+
+
+
+
+
+
+        <div class="HappyChicken"> <img src="./image/IMG_5782.png"
+        alt="HappyChicken">
+        </div>
 
         <p class= "c1"> </p>
 
 
     </body>
 
-    <script src="script.js" rel="script"></script>
-    <script type="text/javascript"></script>
+    <script src="script.js" ></script>
+
 
 
   </html>
