--- a/Project03/Project03.html
+++ b/Project03/Project03.html
@@ -33,7 +33,13 @@
     </div>
   </div>
   <section id="section07" class="demo">
-    <p>eat, play, sleep</p>
+    <p>eat play sleep</p>
+    <div class="dogfeet">
+      <img src="./image/dogfeet.png" alt="dogfeet" title="dogfeet">
+    </div>
+
+    <div class="dogfeetbig">
+    <img src="./image/dogfeetbig.png" alt="dogfeetbig" title="dogfeetbig"> </div>
   </section>
 
 
@@ -43,11 +49,33 @@
 
 
 <div class="panel" data-color="red">
-<h2>Wake me up</h2>
+  <h2>Wake me up</h2>
+  <div class="wakemeup">
+    <img src="./image/IMG_2596.png" alt="WakeHappyUp" title="WakeHappyUp">
+  </div>
 </div>
+
 <div class="panel" data-color="yellow">
-<h2>Feed me</h2>
+  <h2>Feed me</h2>
+  <div class="HappyChicken">
+    <img src="./image/IMG_5782.png" alt="HappyChicken" title="HappyChicken">
+  </div>
+  <div class="Happytongue">
+    <img src="./image/HappyEat.png" alt="Happytongue" title="Happytongue">
+  </div>
+
+
+
+
+
+  <div class="riceball">
+    <img src="./image/riceball.png" alt="riceball" title="riceball">
+  </div>
+  <div class="dogBone">
+      <img src="./image/dog-bone_black.png" alt="dogBone" title="dogBone">
+    </div>
 </div>
+
 <div class="panel" data-color="violet">
   <h2>Play with me</h2>
   <div class="dogwalk">
@@ -73,46 +101,26 @@
   alt="dogball4">
   </div>
 </div>
+
 <div class="panel" data-color="blue">
 <h2>Afternoon walk</h2>
 </div>
-<div class="panel" data-color="indigo">
-<h2>Good night</h2>
+
+<!-- <div class="panel" data-color="indigo"> -->
+<div class="stars"></div>
+  <h2>Good night</h2>
+    <div class="happySleep">
+        <img src="./image/sleephappy.png" alt="happysleep" title="happysleep">
+    </div>
+
+
+
 </div>
 
 
 
-
-        <div class="dogfeet">
-          <img src="./image/dogfeet.png" alt="dogfeet" title="dogfeet">
-        </div>
-
-        <div class="dogfeetbig">
-        <img src="./image/dogfeetbig.png" alt="dogfeetbig" title="dogfeetbig"> </div>
-
-
-        <div class="riceball">
-        <img src="./image/riceball.png" alt="riceball" title="riceball"></div>
-
-        <div class="dogBone">
-          <img src="./image/dog-bone_black.png" alt="dogBone" title="dogBone"> </div>
-
-
-
-
-
-
-        <div id="myButton">
-        <img src="./image/IMG_2596.png"/></div>
-
-
-
-
-
-
-        <div class="HappyChicken"> <img src="./image/IMG_5782.png"
-        alt="HappyChicken">
-        </div>
+        <!-- <div id="myButton">
+        <img src="./image/IMG_2596.png"/></div> -->
 
         <p class= "c1"> </p>
 
